# TP_C-

./: README.md
TD1/src/: fraction.cpp  fraction.hpp  main .cpp  main.cpp  utils.cpp
TD2/src/: ScopedTimer.hpp  exo1.cpp
TD3/src/: exo1.cpp  exo2.cpp  exo3.cpp
TD4/: CMakeLists.txt
TD4/src/: exo1.cpp
TD5/: CMakeLists.txt
TD5/src/: exo1.cpp  exo2.cpp  exo3.cpp
TD6/: CMakeLists.txt
TD6/src/: main.cpp  node.cpp  node.hpp
TD7/: CMakeLists.txt
TD7/src/: graph.cpp  graph.hpp  main.cpp
